Closed Bug 284948 Opened 21 years ago Closed 21 years ago

cmd-F xyz not found, then cmd-F again: doesn't set focus in the "Find in Page" window

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: Dave, Assigned: mikepinkerton)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050304 Camino/0.8+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050304 Camino/0.8+ See steps to reproduce. After you fix this to set focus correctly, in addition, all the text in the text field should be selected. Reproducible: Always Steps to Reproduce: 1. Click Find Next [not found] 2. Command-F [Keyboard focus is not in the "Find Text" field.] Actual Results: See Steps to Reproduce Expected Results: Keyboard focus should be in the "Find Text" field.
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino1.0
I confirm this with the latest code (checkout may 2). This is something we should fix, and I propose a patch for it. (+1 line)
landed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: Camino1.0 → Camino0.9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: