make sure the text field has focus after find (bug 284948)